--- a/src/views/components/contact-block.pug
+++ b/src/views/components/contact-block.pug
@@ -12,31 +12,31 @@
             p Оставьте заявку и наш специалист свяжется с вами в ближайшее время, чтобы ответить на все интересуещие вас вопросы
       .col-12.col-lg-6
         form.contact-block__form
-          .contact-block__input-group
+          .contact-block__input-group.contact-block__input-group--name
             input(placeholder="Ваше имя" type="text" required)
             img(src=require('images/icons/icon-name.svg'))
-          .contact-block__input-group
+          .contact-block__input-group.contact-block__input-group--city
             input(placeholder="Ваш город" type="text" required)
-            img(src=require('images/icons/icon-phone.svg'))
-          .contact-block__input-group
+            img(src=require('images/icons/icon-map.svg'))
+          .contact-block__input-group.contact-block__input-group--phone
             input(placeholder="+ 7(__)-___-__-__" type="text" required)#phone-mask
             img(src=require('images/icons/icon-phone.svg'))
-          .contact-block__input-group.contact-block__input-group-text
+          .contact-block__input-group.contact-block__input-group-text.contact-block__input-group--message
             textarea(placeholder="Текст сообщения")
             img(src=require('images/icons/icon-text.svg'))
-          .contact-block__input-group
+          .contact-block__input-group.contact-block__input-group--mail
             input(placeholder="Электронная почта" type="email" required)
             img(src=require('images/icons/icon-mail.svg'))
-          .contact-block__input-group
+          .contact-block__input-group.contact-block__input-group--time-text
             p Подходящее время для звонка (по МСК)
-          .contact-block__input-group.contact-block__input-group-select
+          .contact-block__input-group.contact-block__input-group-select.contact-block__input-group--time
             select
               option(value="с 9:00 до 12:00") с 9:00 до 12:00
               option(value="с 12:00 до 14:00") с 12:00 до 14:00
               option(value="с 14:00 до 18:00") с 14:00 до 18:00
             img(src=require('images/icons/icon-arrow-down.svg'))
-          .contact-block__input-group
+          .contact-block__input-group.contact-block__input-group--button
             button.new-design__button отправить заявку
-          .contact-block__input-group.contact-block__input-group-check
+          .contact-block__input-group.contact-block__input-group-check.contact-block__input-group--check
             input(id="checkboxid" name="checkboxid" type="checkbox")
             label(for="checkboxid") Даю согласие  на обоаботку персональных данных
