--- a/src/assets/styles/components/_tabs.scss
+++ b/src/assets/styles/components/_tabs.scss
@@ -9,10 +9,15 @@
       position: relative;
       height: 100%;
       transition: visibility 0.4s, opacity 0.4s;
+      background-color: #F6F6F6;
 
       img {
         object-fit: cover;
         height: 100%;
+
+        @media (max-width: 520px) {
+          height: auto;
+        }
       }
 
       &-text {
@@ -41,9 +46,16 @@
           color: $color-one-light;
         }
 
-        @media (max-width: 767px) {
+        @media (max-width: 991px) {
           left: 15px;
           right: 15px;
+        }
+
+        @media (max-width: 520px) {
+          position: relative;
+          bottom: 0;
+          left: 0;
+          right: 0;
         }
       }
     }
@@ -53,7 +65,7 @@
       height: 100%;
     }
 
-    @media (max-width: 767px) {
+    @media (max-width: 991px) {
       flex: 0 0 100%;
       max-width: 100%;
       min-height: 600px;
@@ -79,6 +91,7 @@
 
     &-item {
       margin-bottom: 40px;
+      position: relative;
       p {
         font-weight: 500;
         font-size: 20px;
@@ -103,9 +116,11 @@
         content: "";
         position: absolute;
         background-image: url("@~images/icons/arrow-tab.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
         width: 56px;
-        height: 104px;
-        left: -25px;
+        height: 100%;
+        left: -65px;
         z-index: -1;
         opacity: 0;
         visibility: hidden;
@@ -124,7 +139,7 @@
       }
     }
 
-    @media (max-width: 767px) {
+    @media (max-width: 991px) {
       display: none;
     }
   }
