--- a/src/assets/styles/layout/_page.scss
+++ b/src/assets/styles/layout/_page.scss
@@ -169,7 +169,7 @@
   position: relative;
   background-image: url("@~images/bg-franch.png");
   padding-top: 100px;
-  padding-bottom: 180px;
+  padding-bottom: vw(170);
 
   &__title {
     text-align: center;
