--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -17,7 +17,7 @@
 */
 @import './components/button';
 @import './components/link';
-@import './components/tabs';
+@import './components/steps-slider';
 @import './components/modal';
 @import './components/city';
 
