--- a/src/assets/styles/components/_city.scss
+++ b/src/assets/styles/components/_city.scss
@@ -6,17 +6,15 @@
   &__box {
     width: 100%;
     visibility: hidden;
+    display: none;
     opacity: 0;
+    position: relative;
 
     &.is-visible {
       visibility: visible;
       opacity: 1;
+      display: block;
     }
-  }
-
-  &__regoin {
-    visibility: visible;
-    opacity: 1;
   }
 
   p.city__title {
@@ -65,18 +63,37 @@
       }
     }
   }
+
+  &__return {
+    font-family: $gilroy;
+    font-style: normal;
+    color: $color-white;
+    outline: none;
+    border: none;
+    display: none;
+    position: absolute;
+    background-color: $color-two;
+    right: 0;
+    top: 0;
+
+    @media (max-width: 767px) {
+      display: block;
+    }
+  }
+
   .simplebar-track.simplebar-vertical{
     width: 15px;
     background: #EAEAEA;
     border-radius: 10px;
   }
+
   .simplebar-scrollbar {
     width: 15px;
 
     &:before {
-      background-color: #53C1B1;
+      background-color: $color-two;
       border-radius: 10px;
-      opacity: 1;
+      opacity: 1!important;
       top: 0!important;
       left: 0!important;
       bottom: 0!important;
