--- a/src/views/pages/manufacturing.pug
+++ b/src/views/pages/manufacturing.pug
@@ -182,7 +182,7 @@ block content
       .wrapper-inner
         .row
           .col-12.col-lg-6
-            h2!="ПОДУМАЙТЕ О МАРКЕТИНГЕ И ПОЗИЦИОНИРОВАНИИ  БРЕНДА, <small>А ОСТАЛЬНОЕ МЫ ВОЗЬМЕМ НА СЕБЯ</small>"
+            h2!="ПОДУМАЙТЕ О МАРКЕТИНГЕ И ПОЗИЦИОНИРОВАНИИ  БРЕНДА, <small>А&nbsp;ОСТАЛЬНОЕ МЫ&nbsp;ВОЗЬМЕМ НА&nbsp;СЕБЯ</small>"
             .contact-block__manager
               .contact-block__avatar
                 img(src=require('images/avatar.png'))
